--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require": {
         "twig/twig": "~2.0",
-        "symfony/yaml": "^3.2"
+        "symfony/yaml": "^3.2",
+        "phpmailer/phpmailer": "^5.2"
     }
 }
